# djangoquick

./: .gitignore  pyproject.toml
app/authenticate/: admin.py  models.py  serializers.py  views.py
app/authenticate/migrations/: 0001_initial.py  0002_initial.py
app/core_app/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/core_app/migrations/: 0001_initial.py  0002_product_supplier_supply_supplyproduct_and_more.py  0003_productsale_sale_productsale_sale.py
app/myproject/: settings.py  urls.py
